# darkmatter-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/darkmatter_copilot/: db.py  models.py  seed.py  server.py
src/darkmatter_copilot/resources/: outreach.md  positioning.md  pricing.md  process.md
src/darkmatter_copilot/tools/: case_studies.py  clients.py  findings.py  leads.py  outreach.py  projects.py  resources.py
